<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edu.Services.MusicClient.Project4MusicClient" >

    <Button
        android:id="@+id/play3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play2"
        android:layout_alignRight="@+id/play2"
        android:layout_below="@+id/play2"
        android:text="@string/song_3" />

    <Button
        android:id="@+id/play4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play3"
        android:layout_alignRight="@+id/play3"
        android:layout_below="@+id/play3"
        android:text="@string/song_4" />

    <Button
        android:id="@+id/play5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play4"
        android:layout_alignRight="@+id/play4"
        android:layout_below="@+id/play4"
        android:text="@string/song_5" />

    <Button
        android:id="@+id/play2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/play1"
        android:text="@string/song_2" />

    <Button
        android:id="@+id/play1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play2"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:text="@string/song_1" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play3"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/play4"
        android:layout_marginBottom="17dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/logTransactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/logTransactions" />

    <TextView
        android:id="@+id/songselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/stop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play"
        android:layout_alignRight="@+id/play"
        android:layout_alignStart="@+id/stop"
        android:text="@string/stop" />

</RelativeLayout>
